--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.73.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
-    "styled-components": "^6.1.1"
+    "react-native-vector-icons": "^10.0.2",
+    "styled-components": "^6.1.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
